# compile-time-yaml

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  NOTICE  README.md  ctyaml.cppm
.github/workflows/: tests.yml
examples/: .gitignore  CMakeLists.txt  Makefile  README.md  config.cpp  introspection.cpp  iteration.cpp
include/: ctlark.hpp  ctyaml.hpp
include/ctlark/: actions.hpp  assert.hpp  ast.hpp  common.hpp  compile.hpp  debug.hpp  diag.hpp  earley.hpp  lark.gram  lark.hpp  lift.hpp  text.hpp  tree.hpp
include/ctyaml/: bind.hpp  grammar.hpp  serialize.hpp  types.hpp  views.hpp
single-header/: ctyaml.hpp
tests/: CMakeLists.txt  cxx17.cpp  document.cpp
